# ceres

./: CODE_OF_CONDUCT.md  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml  test-build.yml  test.yml
src/: App.vue  main.ts  model.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/: instances.json  jobs.json
src-tauri/src/: config_manager.rs  export.rs  logs_reader.rs  main.rs  meta_loader.rs  model.rs  tools.rs
src-tauri/src/apis/: mod.rs  notion.rs  subook.rs
src-tauri/src/parser/: actlog.rs  config.rs  meta.rs  mod.rs
src/components/: CeresMenu.vue  FightTable.vue  SvgIcon.vue
src/router/: index.ts
src/views/: BindInfo.vue  OfflineParser.vue  OnlineParser.vue
